@@ -43,6 +43,8 @@ Release 0.3.2 "Don't Bet on the River"
 
   o Colour by B-factor and Occupancy
 
+  o Ramachandran plot dialog remembers where it was put last time
+
 
     -------------------------------------------------------
     -------------------- Old Releases ---------------------
